# challenge

./: .gitignore  .gitmodules  README.md  et --hard HEAD~3  metrics.csv  pyproject.toml  requirements.txt  results.csv  results.json
.github/workflows/: evaluate.yaml  publish.yaml
eval/: pyproject.toml
eval/src/eval/: evaluate.py  f1_max.py
src/eval/: evaluate.py  utils.py
src/eval/groundingdino/models/GroundingDINO/: groundingdino.py
src/eval/sam2/: build_sam.py
src/eval/submission/: README.md  __init__.py  advancedinspector.py  dinov2_sam.py  eval.sh  gmm.py  grounded_sam.py  model - 副本(1).py  model copy.py  model.py  model_0.py  pca.py  prompt_ensemble.py  train_cls.py
src/eval/submission/PromptAD/: ad_prompts.py  model.py
src/eval/submission/PromptAD/CLIPAD/: factory.py  model.py  transformer.py
src/eval/submission/gdino_sam2/: interface.py
src/eval/submission/gdino_sam2/grounding_dino/demo/: gradio_app.py  inference_on_a_image.py  test_ap_on_coco.py
src/eval/submission/gdino_sam2/grounding_dino/groundingdino/dataset/: transforms.py
src/eval/submission/gdino_sam2/grounding_dino/groundingdino/util/: get_tokenlizer.py  inference.py  utils.py
src/eval/submission/gdino_sam2/sam2/: sam2_hiera_b+.yaml  sam2_hiera_l.yaml  sam2_hiera_s.yaml  sam2_hiera_t.yaml  sam2_image_predictor.py
src/eval/submission/memory_bank/: statistic_scores_with_traditional.pkl  statistic_thresholds.pkl  statistic_thresholds2.pkl
src/eval/submission/models/: component_segmentaion.py  component_segmentaion_code.py  grounded_sam.py
src/eval/submission/module/: modules.py  prompt_ensemble.py
src/eval/submission/qkv_open_clip/: factory.py
src/eval/submission/result/mvtecloco/k_1/checkpoint/: CLS-Seed_0-breakfast_box-check_point.pt  CLS-Seed_0-juice_bottle-check_point.pt  CLS-Seed_0-pushpins-check_point.pt  CLS-Seed_0-screw_bag-check_point.pt  CLS-Seed_0-splicing_connectors-check_point.pt  CLS-Seed_111-breakfast_box-check_point.pt  CLS-Seed_111-juice_bottle-check_point.pt  CLS-Seed_111-pushpins-check_point.pt  CLS-Seed_111-screw_bag-check_point.pt  CLS-Seed_111-splicing_connectors-check_point.pt  CLS-Seed_1234-breakfast_box-check_point.pt  CLS-Seed_1234-juice_bottle-check_point.pt  CLS-Seed_1234-pushpins-check_point.pt  CLS-Seed_1234-screw_bag-check_point.pt  CLS-Seed_1234-splicing_connectors-check_point.pt  CLS-Seed_42-breakfast_box-check_point.pt  CLS-Seed_42-juice_bottle-check_point.pt  CLS-Seed_42-pushpins-check_point.pt  CLS-Seed_42-screw_bag-check_point.pt  CLS-Seed_42-splicing_connectors-check_point.pt
src/eval/submission/result/mvtecloco/k_1/csv/: Seed_111-results-L336-base.csv  Seed_111-results-L336-prompt.csv  Seed_111-results-base.csv  Seed_111-results-prompt.csv
src/eval/submission/result/mvtecloco/k_2/checkpoint/: CLS-Seed_0-breakfast_box-check_point.pt  CLS-Seed_0-juice_bottle-check_point.pt  CLS-Seed_0-pushpins-check_point.pt  CLS-Seed_0-screw_bag-check_point.pt  CLS-Seed_0-splicing_connectors-check_point.pt  CLS-Seed_1234-breakfast_box-check_point.pt  CLS-Seed_1234-juice_bottle-check_point.pt  CLS-Seed_1234-pushpins-check_point.pt  CLS-Seed_1234-screw_bag-check_point.pt  CLS-Seed_1234-splicing_connectors-check_point.pt  CLS-Seed_42-breakfast_box-check_point.pt  CLS-Seed_42-juice_bottle-check_point.pt  CLS-Seed_42-pushpins-check_point.pt  CLS-Seed_42-screw_bag-check_point.pt  CLS-Seed_42-splicing_connectors-check_point.pt
src/eval/submission/result/mvtecloco/k_2/csv/: Seed_111-results-L336-base.csv  Seed_111-results-L336-prompt.csv  Seed_111-results-base.csv  Seed_111-results-prompt.csv
src/eval/submission/utils/: comad_utils.py  csv_utils.py  metrics.py  prompt_ensemble.py  training_utils.py
src/groundingdino/models/GroundingDINO/: groundingdino.py
tool/pydensecrf-1.0rc3/pydensecrf/: eigen.cpp
tool/pydensecrf2-1.1/pydensecrf/: densecrf.cpp  eigen.cpp
(+24 files in other folders)
