[project]
name = "vand2025_eval"
version = "0.1.0"
description = "VAND 2025 evaluation script"
readme = "README.md"
requires-python = "==3.10.14"
dependencies = [
    "anomalib[full]",
    "torch==2.6.0",
    "cython==0.29.36",
    "editables>=0.5",
    "eigen>=0.1.1",
    "hatchling>=1.27.0",
    #"pydensecrf==1.0rc3",
    "scikit-learn",
    "setuptools==76.1.0",
    "timm==1.0.15",
    "kmeans-pytorch==0.3",
    "supervision==0.25.1",
    "hydra-core==1.3.2",
    #"groundingdino == 0.1.0",
    "addict==2.4.0",
    "yapf == 0.43.0",
    "pycocotools==2.0.8",
    "iopath==0.1.10",
]

[tool.uv.sources]
anomalib = { git = "https://github.com/openvinotoolkit/anomalib.git", branch = "main" }
#pydensecrf = { git = "https://github.com/lucasb-eyer/pydensecrf.git"}
#groundingdino = {git = "https://github.com/IDEA-Research/GroundingDINO.git", branch = "main"}
#groundingdino = { path = "/home/user/actions-runner/_work/challenge/challenge/src/eval/submission/gdino_sam2/grounding_dino" }


[tool.hatch.build.targets.wheel]
packages = ["src/eval"]

[project.scripts]
eval = "eval.evaluate:eval"

[build-system]
requires = ["hatchling", "setuptools", "wheel", "cython==0.29.36"]
build-backend = "hatchling.build"
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"

[tool.uv]
build-constraint-dependence = ["setuptools"]
#no-build-isolation-package = ["pydensecrf"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["eval"]


