[project]
name = "vand2025_eval"
version = "0.1.0"
description = "VAND 2025 evaluation script"
readme = "README.md"
requires-python = "==3.10.14"
dependencies = [
    "anomalib[full]",
    "scikit-learn==1.6.1",
    "torch==2.3.1",
    "opencv-python==4.10.0.82",
    "numpy==1.26.4",
    "wget==3.0",
    "segment_anything",
    "kmeans_pytorch",
    "h5py",
    "addict==2.4.0",
    "yapf==0.43.0",
    "pycocotools",
    "hf_xet",
    "transformers==4.45.0",
    "timm==1.0.15",
    "supervision==0.25.1",
    "hydra-core==1.3.2",
    "addict==2.4.0",
    "yapf == 0.43.0",
    "pycocotools==2.0.8",
    "iopath==0.1.10",
]

[tool.uv.sources]
anomalib = { git = "https://github.com/openvinotoolkit/anomalib.git", branch = "main" }
segment_anything = {git = "https://github.com/facebookresearch/segment-anything.git", branch = "main"}

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]

[project.scripts]
eval = "eval.evaluate:eval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["eval"]
